--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
 }
 
 .my-container{
-    border: 1px solid black;
+    /* border: 1px solid black; */
     height: 600px;
 
     /* test */
@@ -51,8 +51,10 @@ NAVBAR
 }
 
 .my-navbar .my-nav-left{
-    border: 1px solid black;
-    height: 50px;
+    border: 1px solid rgba(000, 000, 000, 0.4);
+
+    /* border: 1px solid black; */
+    /* height: 50px; */
     /* test */
 
 
@@ -60,7 +62,9 @@ NAVBAR
 }
 
 .my-navbar .my-nav-right{
-    border: 1px solid black;
+    border: 1px solid rgba(000, 000, 000, 0.4);
+
+    /* border: 1px solid black; */
     height: 50px;
 
     /* test */
@@ -96,7 +100,7 @@ MAIN
 
     width: 100%;
     height: 50px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
 
 
 }
@@ -111,7 +115,7 @@ MAIN
 
 
 .my-side-bar{
-    border: 1px solid black;
+    border: 1px solid rgba(000, 000, 000, 0.4);
     height: 50px;
     height: 550px;
 
@@ -129,6 +133,11 @@ MAIN
     background-color: #9FD8F8;
 }
 
+.contacts li img{
+    width: 35px;
+    border-radius: 50%;
+}
+
 li{
     list-style: none;
 }
@@ -144,7 +153,7 @@ Main chat
 
 
 .my-main-block{
-    border: 1px solid black;
+    /* border: 1px solid black; */
     height: 50px;
     height: 550px;
 
